# cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  flake.nix
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: build.yml  release.yml
examples/aerocloud/v6/: create_model.json  create_model.toml  create_simulation.json
examples/aerocloud/v7/: create_model.json  create_simulation.json
examples/aerocloud/v7/batch/simulation-1/: ball.json  ball.stl  params.json
examples/aerocloud/v7/batch/simulation-2/: donut-with-parts.json  params.json
nix/: drv.nix
schemas/: aerocloud.json  aerocloud.schema.graphql
src/: aerocloud.rs  args.rs  config.rs  fmt.rs  http.rs  main.rs  queries.rs  tracing.rs  utils.rs
src/aerocloud/: batch.rs  extra_types.rs  fmt.rs  logo.txt  wizard.rs
src/aerocloud/batch/: project_picker.rs  simulation_detail.rs  simulation_params.rs  submit.rs
src/aerocloud/wizard/: project_picker.rs  simulation_detail.rs  simulation_params.rs
src/commands/: mod.rs
src/commands/aerocloud/: current_token.rs  current_user.rs  mod.rs  set_auth_token.rs
src/commands/aerocloud/v6/: create_model.rs  create_project.rs  create_simulation.rs  delete_projects.rs  delete_simulations.rs  list_projects.rs  list_simulations.rs  list_simulations_results.rs  mod.rs  wait_for_simulations.rs
src/commands/aerocloud/v7/: batch.rs  create_model.rs  create_project.rs  create_simulation.rs  delete_projects.rs  delete_simulations.rs  list_projects.rs  list_reusable_models.rs  list_simulations.rs  list_simulations_results.rs  mod.rs  wait_for_simulations.rs  wizard.rs
src/commands/aerocloud/v7/batch/: project_picker.rs  simulation_detail.rs  simulation_params.rs  submit.rs
src/commands/config/: mod.rs  set_auth_token.rs  set_hostname.rs  set_ws_hostname.rs  show.rs  unset_hostname.rs  unset_ws_hostname.rs
wix/: main.wxs
