[package]
name = "nf"
version = "0.1.0"
description = "CLI app to interact with NablaFlow's API"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "~0.4.42", features = ["serde"] }
clap = { version = "~4.5", features = ["derive", "env"] }
clap-stdin = "0.7.0"
clap_complete = "4.5.59"
clap_mangen = "0.2.30"
color-eyre = { version = "~0.6", default-features = false }
comfy-table = { version = "~7.2.1", features = ["custom_styling"] }
dirs = "6.0.0"
itertools = "0.14.0"
progenitor-client = "0.11.2"
regress = "0.10.4"
reqwest = { version = "~0.12", default-features = false, features = ["rustls-tls", "http2", "json", "gzip", "stream"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "~1.47", default-features = false, features = ["rt", "macros", "fs", "time", "signal"] }
tracing = "~0.1"
tracing-subscriber = "~0.3"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[build-dependencies]
prettyplease = "0.2.37"
progenitor = "0.11.2"
serde_json = "1.0.145"
syn = "2.0.103"

[profile.release]
lto = "thin"

[profile.dev.package.backtrace]
opt-level = 3
